[HOPSWORKS-2828][fix] Fix end_to_end_sklearn notebook

--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -659,7 +659,7 @@
     "SCRIPT_PATH = best_model.version_path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
     "\n",
     "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                         model_path=MODEL_PATH, # set the path of the model to be deployed\n",
+    "                         model_path=best_model.model_path, # set the path of the model to be deployed\n",
     "                         model_server=\"PYTHON\", # set the model server to run the model\n",
     "                         predictor=SCRIPT_PATH, # set the predictor to load the model and make predictions\n",
     "                         # optional arguments\n",
@@ -843,45 +843,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'inputs': [[2.6540398666874823, 7.568800587752348, 5.738836759879631, 2.199690465146779]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[5.968634191410266, 2.4040762622950336, 7.834639512665859, 2.5860830806081148]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[6.987777673014331, 2.596674703791047, 3.0958956562394584, 6.207519483587967]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[2.3227535219465842, 1.6280204665559674, 6.113086486730387, 5.803450394431045]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[3.6242736294347058, 1.2951556560196151, 4.215423923126773, 6.867955505983961]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[5.418496512218132, 1.468588369851811, 1.6361176339997714, 4.142621669523214]]}\n",
       "{'predictions': [1]}\n",
-      "{'inputs': [[3.8178373764585216, 6.645542870942926, 5.944089680594769, 3.3697098745657765]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[6.207332816344927, 6.253407305307914, 2.893754255148087, 7.911809101319298]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[7.1630010428399915, 7.168608138657474, 3.090914691352653, 1.262013943196631]]}\n",
       "{'predictions': [0]}\n",
-      "{'inputs': [[6.725361395282784, 4.286659837341885, 6.156378266489909, 2.6705593171304387]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[5.16616795017345, 1.1542533850936527, 6.945345120658225, 5.082204027369219]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[4.4774032553038605, 2.8928713845053244, 5.3008702618595205, 2.0883647143461492]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[2.3198763364435884, 2.5916419843796437, 7.595302727798609, 2.467777512720213]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[4.5422396552792215, 4.9668647769783645, 6.139911268487624, 3.6616967710072865]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[6.848108237499049, 4.3012828670909, 2.5332564966096456, 6.103516079720544]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[7.483681262344087, 4.8242698178166386, 3.503416030635369, 2.2762774017934455]]}\n",
       "{'predictions': [1]}\n",
-      "{'inputs': [[1.198817467791785, 2.85038746276332, 5.966364565332574, 7.541443011291955]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[7.26657433009014, 5.308204292349167, 5.8130236509975735, 7.439181618106126]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[5.906829086110267, 1.2892190912171633, 3.3933996379608047, 5.24751088465701]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[6.7180658622286815, 6.333968104638813, 4.581759342769892, 2.8924806857678727]]}\n",
       "{'predictions': [2]}"
      ]
     }
@@ -891,7 +871,6 @@
     "\n",
     "for i in range(20):\n",
     "    data = {\"inputs\" : [[random.uniform(1, 8) for i in range(NUM_FEATURES)]]}\n",
-    "    print(data)\n",
     "    response = serving.make_inference_request(SERVING_NAME, data)\n",
     "    print(response)"
    ]
