--- a/notebooks/featurestore/hsfs/online_transformations/builtin_online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/builtin_online_transformations.ipynb
@@ -42,7 +42,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1641207805815_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1641207805815_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1641207805815_0007_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>0</td><td>application_1645116533784_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1645116533784_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1645116533784_0002_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -72,16 +72,7 @@
    "metadata": {},
    "source": [
     "## Generate HSFS Built-In Online Transformations\n",
-    "HSFS comes with built-in transformation functions such as `min_max_scaler`, `standard_scaler`, `robust_scaler` and `label_encoder`. To register these functions with the feature store call `register_builtin_transformation_functions` on the feature store handle. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs.register_builtin_transformation_functions()"
+    "HSFS comes with built-in transformation functions such as `min_max_scaler`, `standard_scaler`, `robust_scaler` and `label_encoder`. These functions are registered in the feature store of every project."
    ]
   },
   {
@@ -100,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<hsfs.transformation_function.TransformationFunction object at 0x7f90a8f0b280>, <hsfs.transformation_function.TransformationFunction object at 0x7f90a8f03ca0>, <hsfs.transformation_function.TransformationFunction object at 0x7f90a8f030d0>, <hsfs.transformation_function.TransformationFunction object at 0x7f90a8f03370>]"
+      "[<hsfs.transformation_function.TransformationFunction object at 0x7fb6adf82d30>, <hsfs.transformation_function.TransformationFunction object at 0x7fb6adf82fa0>, <hsfs.transformation_function.TransformationFunction object at 0x7fb6adf82f40>, <hsfs.transformation_function.TransformationFunction object at 0x7fb6adb080a0>]"
      ]
     }
    ],
@@ -214,7 +205,7 @@
       "\n",
       "\n",
       "# Min-Max scaling\n",
-      "def min_max_scaler(value, min_value, max_value):\n",
+      "def min_max_scaler(value, min_value,max_value):\n",
       "    return (value - min_value) / (max_value - min_value)"
      ]
     }
@@ -299,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -319,16 +310,16 @@
       "+----+---+---------+----------+-----+--------+------+---------+\n",
       "|year| id|   salary|commission|  car|  hvalue|hyears|     loan|\n",
       "+----+---+---------+----------+-----+--------+------+---------+\n",
+      "|2020|  1|120499.73|       0.0|car17|205000.0|    30| 564724.2|\n",
       "|2020|  2|160893.77|       0.0|car10|179000.0|     2|455015.34|\n",
+      "|2020|  3|119159.65|       0.0| car1|145000.0|    22|122025.08|\n",
+      "|2020|  4|  20000.0|  52593.63| car9|185000.0|    30| 99629.62|\n",
       "|2020|  5| 93956.32|       0.0|car15|135000.0|     1| 458679.8|\n",
       "|2020|  6| 41365.43|  52809.15| car7|135000.0|    19| 216839.7|\n",
       "|2020|  7| 94805.61|       0.0|car17|135000.0|    23|233216.06|\n",
       "|2020|  8| 64410.62|  39884.39|car20|125000.0|     6|350707.38|\n",
       "|2020|  9|128298.82|       0.0|car19|135000.0|    12| 20768.06|\n",
       "|2020| 10|100806.92|       0.0| car8|135000.0|     6|293106.66|\n",
-      "|2020|  3|119159.65|       0.0| car1|145000.0|    22|122025.08|\n",
-      "|2020|  4|  20000.0|  52593.63| car9|185000.0|    30| 99629.62|\n",
-      "|2020|  1|120499.73|       0.0|car17|205000.0|    30| 564724.2|\n",
       "+----+---+---------+----------+-----+--------+------+---------+"
      ]
     }
@@ -339,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -462,14 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'salary': <hsfs.transformation_function.TransformationFunction object at 0x7f90a8eb30a0>, 'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7f90a8eb32b0>, 'elevel': <hsfs.transformation_function.TransformationFunction object at 0x7f90a8f15490>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7f90a8f15f10>}"
+      "{'salary': <hsfs.transformation_function.TransformationFunction object at 0x7fb6adb08790>, 'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7fb6adb0ffd0>, 'elevel': <hsfs.transformation_function.TransformationFunction object at 0x7fb6adb08880>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7fb6adb0f700>}"
      ]
     }
    ],
@@ -479,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -489,16 +480,16 @@
       "+---+------+--------+----+---+-------------------+----------+-----+--------+--------------------+--------------------+\n",
       "|age|elevel| zipcode|year| id|             salary|commission|  car|  hvalue|              hyears|                loan|\n",
       "+---+------+--------+----+---+-------------------+----------+-----+--------+--------------------+--------------------+\n",
-      "| 71|     1|zipcode3|2020|  6|-1.0597689460499202|  52809.15| car7|135000.0|  0.6206896551724138|-0.38649341373235696|\n",
-      "| 33|     1|zipcode1|2020|  8|-0.6489014306268116|  39884.39|car20|125000.0|  0.1724137931034483|  0.4140293078456086|\n",
-      "| 32|     3|zipcode2|2020|  7|-0.1069960458425144|       0.0|car17|135000.0|  0.7586206896551724| -0.2885635133105802|\n",
-      "| 44|     3|zipcode8|2020|  2| 1.0712747733778236|       0.0|car10|179000.0|0.034482758620689655|  1.0377863199492403|\n",
-      "| 49|     1|zipcode4|2020|  3|0.32720661898815995|       0.0| car1|145000.0|  0.7241379310344828| -0.9534806526026021|\n",
-      "| 32|     3|zipcode3|2020|  9|0.49014685129569574|       0.0|car19|135000.0|  0.3793103448275862|  -1.558993112445764|\n",
-      "| 56|     0|zipcode2|2020|  4|-1.4406883689742835|  52593.63| car9|185000.0|                 1.0| -1.0874045125575358|\n",
-      "| 54|     2|zipcode5|2020|  1|0.35109856937318834|       0.0|car17|205000.0|                 1.0|  1.6938403242493116|\n",
-      "| 58|     1|zipcode5|2020| 10|                0.0|       0.0| car8|135000.0|  0.1724137931034483| 0.06957957257529503|\n",
-      "| 59|     3|zipcode2|2020|  5|-0.1221378288216204|       0.0|car15|135000.0|                 0.0|   1.059699680029384|\n",
+      "| 71|     1|zipcode3|2020|  6|-1.0597689460499202|  52809.15| car7|135000.0|  0.6206896551724138|-0.38649341373235707|\n",
+      "| 33|     1|zipcode1|2020|  8|-0.6489014306268116|  39884.39|car20|125000.0|  0.1724137931034483| 0.41402930784560865|\n",
+      "| 32|     3|zipcode3|2020|  9|0.49014685129569574|       0.0|car19|135000.0|  0.3793103448275862| -1.5589931124457643|\n",
+      "| 32|     3|zipcode2|2020|  7|-0.1069960458425144|       0.0|car17|135000.0|  0.7586206896551724| -0.2885635133105803|\n",
+      "| 44|     3|zipcode8|2020|  2| 1.0712747733778236|       0.0|car10|179000.0|0.034482758620689655|  1.0377863199492405|\n",
+      "| 49|     1|zipcode4|2020|  3|0.32720661898815995|       0.0| car1|145000.0|  0.7241379310344828| -0.9534806526026023|\n",
+      "| 56|     0|zipcode2|2020|  4|-1.4406883689742835|  52593.63| car9|185000.0|                 1.0|  -1.087404512557536|\n",
+      "| 54|     2|zipcode5|2020|  1|0.35109856937318834|       0.0|car17|205000.0|                 1.0|  1.6938403242493119|\n",
+      "| 59|     3|zipcode2|2020|  5|-0.1221378288216204|       0.0|car15|135000.0|                 0.0|  1.0596996800293843|\n",
+      "| 58|     1|zipcode5|2020| 10|                0.0|       0.0| car8|135000.0|  0.1724137931034483| 0.06957957257529504|\n",
       "+---+------+--------+----+---+-------------------+----------+-----+--------+--------------------+--------------------+"
      ]
     }
@@ -516,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -536,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[54, 2, 'zipcode5', 2020, 1, 0.3511034444286508, 0.0, 'car17', 205000.0, 1.0, 1.6938392030076541]"
+      "[54, 2, 'zipcode5', 2020, 1, 0.3511034444286508, 0.0, 'car17', 205000.0, 1.0, 1.6938392030076546]"
      ]
     }
    ],
@@ -562,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[44, 'level1', 'zipcode8', 2020, 2, 1.207115337594111, 0.0, 'car10', 179000.0, 0.034482758620689655, 1.2437140275646557]"
+      "[44, 'level1', 'zipcode8', 2020, 2, 1.83460249027205, 0.0, 'car10', 179000.0, 0.034482758620689655, 1.4928188879390454]"
      ]
     }
    ],
