modify maggy simple example notebook

--- a/notebooks/ml/Maggy/maggy-hello-world.ipynb
+++ b/notebooks/ml/Maggy/maggy-hello-world.ipynb
@@ -1,59 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "title: \"Maggy Hello World\"\n",
-    "date: 2022-02-28\n",
-    "type: technical_note\n",
-    "draft: false\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Maggy enables you to do Distributed Hyperparameter Optimization, Ablation Study and Model Training with TensorFlow or PyTorch.\n",
-    "Using Maggy, you have to make minimal changes in train your model in a distributed fashion. \n",
-    "\n",
-    "In this notebook, we present the most simple program you can run with Maggy.\n",
-    "To run it, make sure you have the latest Maggy installation. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Model definition\n",
-    "\n",
-    "Let's define the model we want to train. The layers of the model have to be defined in the \\_\\_init__ function.\n",
-    "\n",
-    "Do not instantiate the class, otherwise you won't be able to use Maggy."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from maggy.experiment import experiment\n",
-    "from maggy.experiment_config.tf_distributed import TfDistributedConfig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "d"
+    "from maggy.experiment_config import LagomConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -70,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = TfDistributedConfig(name=\"hello_world\")"
+    "config = LagomConfig(name=\"hello_world\", description=\"hello world experiment\", hb_interval = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -90,14 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-28T09:51:51.478246 (0/0): train_set or test_set is null, data has not been sharded. \n",
-      "\n",
-      "2022-02-28T09:51:51.478964 (0/0): index of slice 0 \n",
-      "\n",
-      "2022-02-28T09:51:51.479154 (0/0): Starting distributed training. \n",
-      "\n",
-      "2022-02-28T09:51:52.510979 (0/0): Finished distributed training. \n",
-      "\n"
+      "You are running Maggy on Hopsworks.\n"
      ]
     }
    ],
@@ -107,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +68,7 @@
        "100"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
