updated simple example to run without configuration object

--- a/notebooks/ml/Maggy/maggy-hello-world.ipynb
+++ b/notebooks/ml/Maggy/maggy-hello-world.ipynb
@@ -6,13 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maggy.experiment import experiment\n",
-    "from maggy.experiment_config import LagomConfig"
+    "from maggy.experiment import experiment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from maggy.config import Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -29,12 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "config = LagomConfig(name=\"hello_world\", description=\"hello world experiment\", hb_interval = None)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -54,7 +60,7 @@
     }
    ],
    "source": [
-    "result = experiment.lagom(training_function, config)"
+    "result = experiment.lagom(training_function)"
    ]
   },
   {
