change hsfs extra to python

--- a/notebooks/featurestore/aws/sagemaker/aws-sagemaker.ipynb
+++ b/notebooks/featurestore/aws/sagemaker/aws-sagemaker.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install hsfs[hive]==2.1.4"
+    "!pip install hsfs[python]"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "source": [
     "Note that we are installing the latest version at the time of writing this (2.1.4) - you should always install the latest minor version that corresponds to the version of your Hopsworks Feature Store. So in this case our Hopsworks instance is running version 2.1.\n",
-    "Furthermore, for Python clients (such as AWS SageMaker), it is important to install HSFS with the `[hive]` optional extra. Spark clients do not need this.\n",
+    "Furthermore, for Python clients (such as AWS SageMaker), it is important to install HSFS with the `[python]` optional extra. Spark clients do not need this.\n",
     "\n",
     "After successfully installing HSFS, you should be able to connect to the Feature Store from your SageMaker notebook (note: you might need to restart the kernel, if you had HSFS previously installed):"
    ]
@@ -74,7 +74,7 @@
     "\n",
     "connection = hsfs.connection(host=\"[UUID].cloud.hopsworks.ai\",\n",
     "    project=\"[project-name]\",\n",
-    "    engine=\"hive\",\n",
+    "    engine=\"python\",\n",
     "    api_key_value=\"[api-key]\")\n",
     "\n",
     "fs = connection.get_feature_store()"
