--- a/notebooks/featurestore/gcp/colab.ipynb
+++ b/notebooks/featurestore/gcp/colab.ipynb
@@ -119,7 +119,7 @@
    ],
    "source": [
     "!pip3 uninstall hsfs -y\n",
-    "!pip3 install hsfs[hive] --no-warn-conflicts"
+    "!pip3 install hsfs[python] --no-warn-conflicts"
    ]
   },
   {
@@ -134,7 +134,7 @@
     "# TODO: replace the values below: [UUID], [project-name], [api-key]\n",
     "connection = hsfs.connection(host=\"[UUID].cloud.hopsworks.ai\",   # UUID is from Step 1, above\n",
     "    project=\"[project-name]\",                                    # project-name is from Step 2, above\n",
-    "    engine=\"hive\",\n",
+    "    engine=\"python\",\n",
     "    api_key_value=\"[api-key]\")                                   # the API key comes from Step 3, above\n",
     "\n",
     "fs = connection.get_feature_store()"
