--- a/notebooks/featurestore/azure/azure-ml-studio.ipynb
+++ b/notebooks/featurestore/azure/azure-ml-studio.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install hsfs[hive]"
+    "!pip install hsfs[python]"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "# TODO: replace the values below: [UUID], [project-name], [api-key]\n",
     "connection = hsfs.connection(host=\"[UUID].cloud.hopsworks.ai\",\n",
     "    project=\"[project-name]\",\n",
-    "    engine=\"hive\",\n",
+    "    engine=\"python\",\n",
     "    api_key_value=\"[api-key]\")\n",
     "\n",
     "fs = connection.get_feature_store()"
