--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "82f77013",
+   "id": "55cb0ca2",
    "metadata": {},
    "source": [
     "---\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "89a78852",
+   "id": "0d0bb839",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>22</td><td>application_1648323495760_0034</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1648323495760_0034/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1648323495760_0034_01_000001/streamFg__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>17</td><td>application_1648485762103_0043</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1648485762103_0043/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1648485762103_0043_01_000001/test_flink__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e3abe80",
+   "id": "d656174e",
    "metadata": {},
    "source": [
     "# Create empty feature groups \n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d54c731d",
+   "id": "dcffea7e",
    "metadata": {},
    "source": [
     "### Define schema for feature groups"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b229a07",
+   "id": "b85e064e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077702fb",
+   "id": "e33f9e46",
    "metadata": {},
    "source": [
     "### Create empty spark dataframes "
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3cdd1017",
+   "id": "59f257a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df7692b",
+   "id": "209666d8",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3a9c5324",
+   "id": "c97770d5",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b3cce17",
+   "id": "219fff80",
    "metadata": {},
    "source": [
     "### Create feature group metadata objects and save empty spark dataframes to materialise them in hopsworks feature store.\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a3a615b",
+   "id": "98026978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +168,7 @@
     "                                             version = 1,\n",
     "                                             statistics_config=False, \n",
     "                                             primary_key=[\"tid\"],\n",
+    "                                             online_enabled=True,\n",
     "                                             stream=True)\n",
     "\n",
     "card_transactions.save(empty_card_df)"
@@ -176,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "904638e7",
+   "id": "162c2194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +185,7 @@
     "                                              version = 1,\n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"cc_num\"],\n",
+    "                                              online_enabled=True,                                                    \n",
     "                                              stream=True)\n",
     "\n",
     "card_transactions_10m_agg.save(empty_10m_agg_df)"
@@ -192,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9df7c49",
+   "id": "bda3457f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +202,7 @@
     "                                              version = 1,\n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"cc_num\"],\n",
+    "                                              online_enabled=True,                                                   \n",
     "                                              stream=True)\n",
     "\n",
     "card_transactions_1h_agg.save(empty_1h_agg_df)"
@@ -208,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f2c617f5",
+   "id": "aa5ef82f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +219,7 @@
     "                                              version = 1,\n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"cc_num\"],\n",
+    "                                              online_enabled=True,                                                    \n",
     "                                              stream=True)\n",
     "\n",
     "card_transactions_12h_agg.save(empty_12h_agg_df)"
@@ -224,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d05dd21f",
+   "id": "5f7d2af4",
    "metadata": {},
    "outputs": [],
    "source": []
