--- a/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84c19a7f",
+   "id": "18b4fb84",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75d7fafc",
+   "id": "52052278",
    "metadata": {},
    "source": [
     "## Import necessary libraries"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "008f12bc",
+   "id": "62e29526",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>23</td><td>application_1648323495760_0035</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1648323495760_0035/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1648323495760_0035_01_000001/streamFg__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>18</td><td>application_1648485762103_0044</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1648485762103_0044/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1648485762103_0044_01_000001/test_flink__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95a208b6",
+   "id": "791d222a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9abe5b4",
+   "id": "db664e63",
    "metadata": {},
    "source": [
     "## Create a stream from the kafka topic\n"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e360ec06",
+   "id": "7a60b596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f582141f",
+   "id": "413c818e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "710ecee6",
+   "id": "19f9287b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "376af21d",
+   "id": "ef6286d8",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9b33e2e9",
+   "id": "33e6498c",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8288ad02",
+   "id": "56bf8db4",
    "metadata": {},
    "source": [
     "## Create windowing aggregations over different time windows using spark streaming."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ebccda38",
+   "id": "851f3469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "76007966",
+   "id": "291505a3",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c709f3f2",
+   "id": "9151e68f",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7c3520fe",
+   "id": "d4b866d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ead6d922",
+   "id": "0477252b",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "64530d64",
+   "id": "0454f0f4",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e55e1b47",
+   "id": "f268e9a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e1ace24a",
+   "id": "62de2b0c",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d71ad365",
+   "id": "3d13fa2b",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "782d5e63",
+   "id": "7eb08ee3",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d7af5968",
+   "id": "28b5fcdc",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4953de",
+   "id": "326cbda0",
    "metadata": {},
    "source": [
     "## Get feature groups from hopsworks feature store."
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b2a1c4f7",
+   "id": "8ce8b25f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38889e1d",
+   "id": "13835bd5",
    "metadata": {},
    "source": [
     "## Insert streaming dataframes to the online feature group\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1671e3ab",
+   "id": "14118480",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,25 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5322f774",
+   "id": "50e6abb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False"
+     ]
+    }
+   ],
+   "source": [
+    "not card_transactions_10m_agg.online_enabled and not card_transactions_10m_agg.stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5ae38299",
    "metadata": {},
    "outputs": [
     {
@@ -450,8 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5a05f7b8",
+   "execution_count": 22,
+   "id": "2c68ff6c",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e3f07f",
+   "id": "808c5492",
    "metadata": {},
    "source": [
     "### Check if spark streaming query is active"
@@ -476,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "8f1d7fa4",
+   "execution_count": 23,
+   "id": "033fb191",
    "metadata": {},
    "outputs": [
     {
@@ -494,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "350b18aa",
+   "execution_count": 24,
+   "id": "a86a0469",
    "metadata": {},
    "outputs": [
     {
@@ -512,8 +530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "03300c5c",
+   "execution_count": 25,
+   "id": "a8414efd",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444d54bc",
+   "id": "57efd1be",
    "metadata": {},
    "source": [
     "#### We can also check status of a query and if there are any exceptions trown."
@@ -538,35 +556,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "77797ade",
+   "execution_count": 31,
+   "id": "82866234",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'message': 'Getting offsets from KafkaV2[Subscribe[credit_card_transactions]]', 'isDataAvailable': False, 'isTriggerActive': True}"
+      "{'message': 'Waiting for data to arrive', 'isDataAvailable': False, 'isTriggerActive': False}"
      ]
     }
    ],
    "source": [
-    "query_10m.status"
+    "query_1h.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d84d2c93",
+   "execution_count": 32,
+   "id": "e81dd25d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_10m.exception()"
+    "query_1h.exception()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8c56704",
+   "id": "4771cc3e",
    "metadata": {},
    "source": [
     "### Lets check if data was ingested in to the online feature store"
@@ -574,50 +592,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "99d30c56",
+   "execution_count": 33,
+   "id": "466a0b55",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------+-----------------+---------------+-----------------+\n",
-      "|cc_num          |num_trans_per_10m|avg_amt_per_10m|stdev_amt_per_10m|\n",
-      "+----------------+-----------------+---------------+-----------------+\n",
-      "|4467512729899486|1                |61.26          |null             |\n",
-      "|4526094550580419|1                |92.11          |null             |\n",
-      "|4671096685272336|1                |4.92           |null             |\n",
-      "|4446288810992896|1                |0.25           |null             |\n",
-      "|4956860373932956|1                |35.21          |null             |\n",
-      "|4783713328425247|1                |52.17          |null             |\n",
-      "|4135449811055770|1                |22.32          |null             |\n",
-      "|4950757030424276|1                |48.5           |null             |\n",
-      "|4827760497563827|1                |48.45          |null             |\n",
-      "|4205091756219139|1                |35.05          |null             |\n",
-      "|4830349319515887|2                |439.555        |619.5740327434647|\n",
-      "|4384014188635576|1                |739.47         |null             |\n",
-      "|4650661577010550|1                |86.05          |null             |\n",
-      "|4232153519700594|1                |3.32           |null             |\n",
-      "|4762714231199452|1                |65.64          |null             |\n",
-      "|4934399043970226|1                |9630.71        |null             |\n",
-      "|4170245277417751|1                |64.64          |null             |\n",
-      "|4033160065800364|1                |99.97          |null             |\n",
-      "|4683617042712171|1                |24.34          |null             |\n",
-      "|4208317936968510|1                |71.5           |null             |\n",
-      "+----------------+-----------------+---------------+-----------------+\n",
+      "+----------------+-----------------+------------------+------------------+\n",
+      "|cc_num          |num_trans_per_12h|avg_amt_per_12h   |stdev_amt_per_12h |\n",
+      "+----------------+-----------------+------------------+------------------+\n",
+      "|4444037300542691|7                |154.51857142857145|238.93552871214524|\n",
+      "|4609072304828342|7                |176.02714285714288|263.06316920176454|\n",
+      "|4161715127983823|10               |928.3030000000001 |1809.7934375689888|\n",
+      "|4223253728365626|13               |1201.686153846154 |2724.0564739389993|\n",
+      "|4572259224622748|9                |1291.5500000000002|2495.189283160699 |\n",
+      "|4436298663019939|11               |149.78636363636366|235.75729924109365|\n",
+      "|4159210768503456|6                |37.303333333333335|26.403001092047596|\n",
+      "|4231082502226286|10               |977.8430000000001 |2071.1095165208753|\n",
+      "|4090612125343330|15               |646.7259999999999 |1336.9214811370616|\n",
+      "|4416410688550228|11               |663.0627272727273 |1631.6188600717442|\n",
+      "|4853206196105715|10               |1077.6439999999998|2793.72050986255  |\n",
+      "|4032763187099525|10               |425.006           |1204.4018071612704|\n",
+      "|4811343280984688|6                |237.08166666666662|305.3312340666554 |\n",
+      "|4815447301191763|6                |78.35833333333333 |29.206839895248287|\n",
+      "|4645884898081724|8                |171.48125000000002|200.51632676222223|\n",
+      "|4872287670027309|3                |260.63666666666666|427.3684126527525 |\n",
+      "|4524584153018280|7                |160.18714285714285|223.19407330200963|\n",
+      "|4734811798843814|7                |122.81714285714285|166.56810466135522|\n",
+      "|4609746692923340|9                |1401.2866666666669|3007.164227935514 |\n",
+      "|4526611032294580|6                |109.52166666666666|150.55966530471125|\n",
+      "+----------------+-----------------+------------------+------------------+\n",
       "only showing top 20 rows"
      ]
     }
    ],
    "source": [
-    "fs.sql(\"SELECT * FROM card_transactions_10m_agg_1\",online=True).show(20,False)"
+    "fs.sql(\"SELECT * FROM card_transactions_12h_agg_1\",online=True).show(20,False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "0917bb53",
+   "execution_count": 34,
+   "id": "5d72f7a8",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c79cca4",
+   "id": "1ed60609",
    "metadata": {},
    "source": [
     "### Stop queries\n",
@@ -644,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "620ceddd",
+   "id": "86a26cbe",
    "metadata": {},
    "outputs": [],
    "source": [
