--- a/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cabb4768",
+   "id": "46b5630c",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4109e285",
+   "id": "386dce1c",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4e6075b9",
+   "id": "ba8d6bc6",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d49fa542",
+   "id": "d25401e3",
    "metadata": {},
    "source": [
     "## Get feature groups"
@@ -74,18 +74,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f1737f4",
+   "id": "087490dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "card_transactions_10m_agg = fs.get_stream_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
-    "card_transactions_1h_agg = fs.get_stream_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
-    "card_transactions_12h_agg = fs.get_stream_feature_group(\"card_transactions_12h_agg\", version = 1)"
+    "card_transactions_10m_agg = fs.get_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
+    "card_transactions_1h_agg = fs.get_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
+    "card_transactions_12h_agg = fs.get_feature_group(\"card_transactions_12h_agg\", version = 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d725c77",
+   "id": "2757f277",
    "metadata": {},
    "source": [
     "## Create training dataset"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9527e0ac",
+   "id": "a6c27602",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb13960",
+   "id": "8ba03074",
    "metadata": {},
    "outputs": [],
    "source": []
