--- a/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1acd21ac",
+   "id": "18b4fb84",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bec1abdb",
+   "id": "52052278",
    "metadata": {},
    "source": [
     "## Import necessary libraries"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c48ea89f",
+   "id": "62e29526",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1643892948709_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1643892948709_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1643892948709_0007_01_000001/delta_test__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>18</td><td>application_1648485762103_0044</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1648485762103_0044/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1648485762103_0044_01_000001/test_flink__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81cc17fc",
+   "id": "791d222a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833dfbac",
+   "id": "db664e63",
    "metadata": {},
    "source": [
     "## Create a stream from the kafka topic\n"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c55e1c42",
+   "id": "7a60b596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "092bd3d8",
+   "id": "413c818e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "68ac357a",
+   "id": "19f9287b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6e4dfec",
+   "id": "ef6286d8",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "03d3512b",
+   "id": "33e6498c",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ead0c28",
+   "id": "56bf8db4",
    "metadata": {},
    "source": [
     "## Create windowing aggregations over different time windows using spark streaming."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "34c1e150",
+   "id": "851f3469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "eae818df",
+   "id": "291505a3",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3b802565",
+   "id": "9151e68f",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a166b3f9",
+   "id": "d4b866d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "44fe99df",
+   "id": "0477252b",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "30c837c6",
+   "id": "0454f0f4",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4826974a",
+   "id": "f268e9a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8594c20a",
+   "id": "62de2b0c",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c02e90dc",
+   "id": "3d13fa2b",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093f1f98",
+   "id": "7eb08ee3",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "81aab19c",
+   "id": "28b5fcdc",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "852cdf1a",
+   "id": "326cbda0",
    "metadata": {},
    "source": [
     "## Get feature groups from hopsworks feature store."
@@ -392,19 +392,19 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "06b55a32",
+   "id": "8ce8b25f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "card_transactions = fs.get_stream_feature_group(\"card_transactions\", version = 1)\n",
-    "card_transactions_10m_agg = fs.get_stream_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
-    "card_transactions_1h_agg = fs.get_stream_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
-    "card_transactions_12h_agg = fs.get_stream_feature_group(\"card_transactions_12h_agg\", version = 1)"
+    "card_transactions = fs.get_feature_group(\"card_transactions\", version = 1)\n",
+    "card_transactions_10m_agg = fs.get_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
+    "card_transactions_1h_agg = fs.get_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
+    "card_transactions_12h_agg = fs.get_feature_group(\"card_transactions_12h_agg\", version = 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "542f93a8",
+   "id": "13835bd5",
    "metadata": {},
    "source": [
     "## Insert streaming dataframes to the online feature group\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f231529e",
+   "id": "14118480",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,25 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b8383818",
+   "id": "50e6abb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False"
+     ]
+    }
+   ],
+   "source": [
+    "not card_transactions_10m_agg.online_enabled and not card_transactions_10m_agg.stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5ae38299",
    "metadata": {},
    "outputs": [
     {
@@ -450,8 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "cc845bf8",
+   "execution_count": 22,
+   "id": "2c68ff6c",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4b38a1d",
+   "id": "808c5492",
    "metadata": {},
    "source": [
     "### Check if spark streaming query is active"
@@ -476,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "24701f43",
+   "execution_count": 23,
+   "id": "033fb191",
    "metadata": {},
    "outputs": [
     {
@@ -494,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e29ceabd",
+   "execution_count": 24,
+   "id": "a86a0469",
    "metadata": {},
    "outputs": [
     {
@@ -512,8 +530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "3f8a6eca",
+   "execution_count": 25,
+   "id": "a8414efd",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57bc36c",
+   "id": "57efd1be",
    "metadata": {},
    "source": [
     "#### We can also check status of a query and if there are any exceptions trown."
@@ -538,8 +556,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "f5ace08c",
+   "execution_count": 31,
+   "id": "82866234",
    "metadata": {},
    "outputs": [
     {
@@ -551,22 +569,22 @@
     }
    ],
    "source": [
-    "query_10m.status"
+    "query_1h.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f141744f",
+   "execution_count": 32,
+   "id": "e81dd25d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_10m.exception()"
+    "query_1h.exception()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df8af341",
+   "id": "4771cc3e",
    "metadata": {},
    "source": [
     "### Lets check if data was ingested in to the online feature store"
@@ -574,50 +592,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "6c168509",
+   "execution_count": 33,
+   "id": "466a0b55",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------+-----------------+---------------+-----------------+\n",
-      "|cc_num          |num_trans_per_10m|avg_amt_per_10m|stdev_amt_per_10m|\n",
-      "+----------------+-----------------+---------------+-----------------+\n",
-      "|4532606684286514|1                |286.41         |null             |\n",
-      "|4032763187099525|1                |36.26          |null             |\n",
-      "|4572259224622748|1                |23.83          |null             |\n",
-      "|4436298663019939|1                |565.97         |null             |\n",
-      "|4259753809723533|1                |829.05         |null             |\n",
-      "|4789490563144262|1                |660.42         |null             |\n",
-      "|4985024436370614|1                |446.1          |null             |\n",
-      "|4488260402352127|1                |11.11          |null             |\n",
-      "|4880931623427294|1                |8324.17        |null             |\n",
-      "|4148950609641791|1                |11.66          |null             |\n",
-      "|4416410688550228|1                |167.71         |null             |\n",
-      "|4231082502226286|1                |698.01         |null             |\n",
-      "|4090612125343330|1                |32.21          |null             |\n",
-      "|4834237757774643|1                |3.68           |null             |\n",
-      "|4794233751173765|1                |6.26           |null             |\n",
-      "|4815447301191763|1                |23.08          |null             |\n",
-      "|4609072304828342|2                |66.795         |44.45580333319825|\n",
-      "|4615861341152316|1                |879.52         |null             |\n",
-      "|4526611032294580|1                |37.21          |null             |\n",
-      "|4872287670027309|1                |10.32          |null             |\n",
-      "+----------------+-----------------+---------------+-----------------+\n",
+      "+----------------+-----------------+------------------+------------------+\n",
+      "|cc_num          |num_trans_per_12h|avg_amt_per_12h   |stdev_amt_per_12h |\n",
+      "+----------------+-----------------+------------------+------------------+\n",
+      "|4444037300542691|7                |154.51857142857145|238.93552871214524|\n",
+      "|4609072304828342|7                |176.02714285714288|263.06316920176454|\n",
+      "|4161715127983823|10               |928.3030000000001 |1809.7934375689888|\n",
+      "|4223253728365626|13               |1201.686153846154 |2724.0564739389993|\n",
+      "|4572259224622748|9                |1291.5500000000002|2495.189283160699 |\n",
+      "|4436298663019939|11               |149.78636363636366|235.75729924109365|\n",
+      "|4159210768503456|6                |37.303333333333335|26.403001092047596|\n",
+      "|4231082502226286|10               |977.8430000000001 |2071.1095165208753|\n",
+      "|4090612125343330|15               |646.7259999999999 |1336.9214811370616|\n",
+      "|4416410688550228|11               |663.0627272727273 |1631.6188600717442|\n",
+      "|4853206196105715|10               |1077.6439999999998|2793.72050986255  |\n",
+      "|4032763187099525|10               |425.006           |1204.4018071612704|\n",
+      "|4811343280984688|6                |237.08166666666662|305.3312340666554 |\n",
+      "|4815447301191763|6                |78.35833333333333 |29.206839895248287|\n",
+      "|4645884898081724|8                |171.48125000000002|200.51632676222223|\n",
+      "|4872287670027309|3                |260.63666666666666|427.3684126527525 |\n",
+      "|4524584153018280|7                |160.18714285714285|223.19407330200963|\n",
+      "|4734811798843814|7                |122.81714285714285|166.56810466135522|\n",
+      "|4609746692923340|9                |1401.2866666666669|3007.164227935514 |\n",
+      "|4526611032294580|6                |109.52166666666666|150.55966530471125|\n",
+      "+----------------+-----------------+------------------+------------------+\n",
       "only showing top 20 rows"
      ]
     }
    ],
    "source": [
-    "fs.sql(\"SELECT * FROM card_transactions_10m_agg_1\",online=True).show(20,False)"
+    "fs.sql(\"SELECT * FROM card_transactions_12h_agg_1\",online=True).show(20,False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "8498be6f",
+   "execution_count": 34,
+   "id": "5d72f7a8",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7361c386",
+   "id": "1ed60609",
    "metadata": {},
    "source": [
     "### Stop queries\n",
@@ -644,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1f4db4b8",
+   "id": "86a26cbe",
    "metadata": {},
    "outputs": [],
    "source": [
